<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/Toolbar_share"
        android:title="@string/share"
        android:icon="@drawable/ic_baseline_share_24"
        app:showAsAction="always" />
    <item
        android:id="@+id/Toolbar_orders"
        android:title="@string/orders"
        android:icon="@drawable/orders"
        app:showAsAction="always" />
    <item
        android:id="@+id/Toolbar_cart"
        android:title="@string/cart"
        android:icon="@drawable/cart"
        app:showAsAction="always" />
    <item
        android:id="@+id/Toolbar_Notification_bell"
        android:title="@string/notifications"
        android:icon="@drawable/ic_baseline_circle_notifications_24"
        app:showAsAction="ifRoom" />

</menu>